--- a/client/src/components/features/SeatChooser/SeatChooser.scss
+++ b/client/src/components/features/SeatChooser/SeatChooser.scss
@@ -11,6 +11,13 @@
   }
 }
 
+.seats_counter{
+  font-family: inherit;
+  width: 100%;
+  text-align: center;
+  padding: 15px;
+}
+
 @media (max-width: 1200px) {
 
   .seats__seat {
